WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196017
(Test fix) Override minimumTimeBetweenDataRecordsRemoval in ResourceLoadStatisticsStore::shouldRemoveDataRecord() during layout tests
https://bugs.webkit.org/show_bug.cgi?id=196017
Summary
(Test fix) Override minimumTimeBetweenDataRecordsRemoval in ResourceLoadStati...
John Wilander
Reported
2019-03-20 10:55:43 PDT
The test added in
https://bugs.webkit.org/show_bug.cgi?id=195923
is failing because ITP refuses (and should refuse) to remove website data repeatedly. We should add an exception to this rule when running under parameters().isRunningTest.
Attachments
Patch for landing
(2.00 KB, patch)
2019-03-20 10:57 PDT
,
John Wilander
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Wilander
Comment 1
2019-03-20 10:57:19 PDT
Created
attachment 365359
[details]
Patch for landing
WebKit Commit Bot
Comment 2
2019-03-20 12:01:37 PDT
Comment on
attachment 365359
[details]
Patch for landing Clearing flags on attachment: 365359 Committed
r243222
: <
https://trac.webkit.org/changeset/243222
>
WebKit Commit Bot
Comment 3
2019-03-20 12:01:39 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-03-20 12:05:10 PDT
<
rdar://problem/49072535
>
Shawn Roberts
Comment 5
2019-03-22 11:36:29 PDT
http/tests/resourceLoadStatistics/website-data-removal-for-site-navigated-to-with-link-decoration.html started to become flaky again on the dashboard ~
r243340
Dashboard :
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=http%2Ftests%2FresourceLoadStatistics%2Fwebsite-data-removal-for-site-navigated-to-with-link-decoration.html
I can reproduce it locally with : run-webkit-tests http/tests/resourceLoadStatistics/website-data-removal-for-site-navigated-to-with-link-decoration.html --iterations 500 --child-processes 1 Usually only about 2/500 failures in revisions between
r243351
to
r243373
. with 1 child process. If I run it in full parallel (-f), it will fail a lot more consistently, but I don't know if that may be causing false positives. It will fail in full parallel between
r242231
and
r243347
. ~2/5000 iterations Passes in full parallel with 5000 iterations from
r243222
to
r243230
. Local Diff is the same as the bots, with 1 child process or full parallel : --- /Volumes/Data/slave/mojave-release-tests-wk2/build/layout-test-results/http/tests/resourceLoadStatistics/website-data-removal-for-site-navigated-to-with-link-decoration-expected.txt +++ /Volumes/Data/slave/mojave-release-tests-wk2/build/layout-test-results/http/tests/resourceLoadStatistics/website-data-removal-for-site-navigated-to-with-link-decoration-actual.txt @@ -32,4 +32,4 @@ localhost gotLinkDecorationFromPrevalentResource: No isPrevalentResource: No isVeryPrevalentResource: No - dataRecordsRemoved: 1 + dataRecordsRemoved: 0
Shawn Roberts
Comment 6
2019-03-27 11:25:20 PDT
Regressed issue down to
https://trac.webkit.org/changeset/243348/webkit
, appears to be responsible for new behavior.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug