(Test fix) Override minimumTimeBetweenDataRecordsRemoval in ResourceLoadStatisticsStore::shouldRemoveDataRecord() during layout tests https://bugs.webkit.org/show_bug.cgi?id=196017

Unreviewed test fix.

This patch adds a check of parameters().isRunningTest to the return of
ResourceLoadStatisticsStore::shouldRemoveDataRecord() to allow successive
layout tests to remove website data, effectively overriding the
minimumTimeBetweenDataRecordsRemoval setting.


* NetworkProcess/Classifier/ResourceLoadStatisticsStore.cpp:
(WebKit::ResourceLoadStatisticsStore::shouldRemoveDataRecords const):


Canonical link: https://commits.webkit.org/210288@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243222 268f45cc-cd09-0410-ab3c-d52691b4dbfc